Collapsed revision #correctly display compare bar #hide some color bars #display only single bar #display compare bar

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_staffing.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_staffing.scss
@@ -11,3 +11,39 @@
     background: rgba(0, 0, 0, 0.06);
     border-radius: 0;
 }
+
+.c3-target-UnderStaffScaffold {
+    fill-opacity: 0 !important;
+}
+
+.c3-target-OverStaffScaffold {
+    fill-opacity: 0 !important;
+}
+
+.c3-bars-OverStaffScaffold > path{
+    opacity: 0 !important;
+}
+
+.c3-bars-UnderStaffScaffold > path{
+    opacity: 0 !important;
+}
+
+.c3-target-SuggestedUnderStaffScaffold {
+    fill-opacity: 0 !important;
+}
+
+.c3-target-SuggestedOverStaffScaffold {
+    fill-opacity: 0 !important;
+}
+
+.c3-bars-SuggestedOverStaffScaffold > path{
+    opacity: 0 !important;
+}
+
+.c3-bars-SuggestedUnderStaffScaffold > path{
+    opacity: 0 !important;
+}
+
+
+
+
